# budgie-mailnag-applet

./: README.md  meson.build
src/: BudgieMailnagApplet.plugin.in  BudgieMailnagApplet.vala  meson.build
